resolved snapshot